activity feed for admin

--- a/app/views/partials/theme/simple/activities/order_created.liquid
+++ b/app/views/partials/theme/simple/activities/order_created.liquid
@@ -2,4 +2,5 @@
      object_id: payload.object.id,
      target: payload.target.properties.name,
      target_id: payload.target.id,
+     url: payload.target.properties.cover_photo_url,
      scope: 'app.activities.types'  %}
