--- a/app/views/pages/orders/create.liquid
+++ b/app/views/pages/orders/create.liquid
@@ -12,9 +12,9 @@ method: post
     function_rc object = 'lib/commands/orders/create/execute', object: object
 
     if object.valid
-      function_rc status = 'lib/commands/order_statuses/create', order: object, current_user_id: current_user_id, name: 'app.order_statuses.placed'
+      function_rc status = 'lib/commands/order_statuses/create', order: object, current_user_id: context.current_user.id, name: 'app.order_statuses.placed'
 
-      include 'lib/commands/events/create', type: 'order_created', actor_id: object.buyer.id, target_id: object.seller.id, object_id: object.id
+      include 'lib/commands/events/create', type: 'order_created', actor_id: object.buyer.id, target_id: context.params.item_id, object_id: object.id
 
       include 'lib/flash/publish', notice: 'app.orders.created'
       include 'redirect_to', url: '/dashboard/buy/orders'
