--- a/app/views/partials/lib/commands/users/update/execute.liquid
+++ b/app/views/partials/lib/commands/users/update/execute.liquid
@@ -1,11 +1,14 @@
 {% liquid
-  graphql r = 'users/update_password', args: object
+  graphql r = 'users/update_profile', args: object
 
   if r.errors
     log r.errors, type: 'errors.graphql.invalid'
 
     hash_assign object['valid'] = false
     hash_assign object['errors'] = r.errors
+  else
+    assign object = r.user
+    hash_assign object['valid'] = true
   endif
 
   return_rc object
