--- a/app/views/pages/profile/index.liquid
+++ b/app/views/pages/profile/index.liquid
@@ -1,7 +1,9 @@
 ---
 slug: profile
 ---
-{%liquid
+{% liquid
+  include 'lib/must_be_authenticated'
+
   assign user_id = context.current_user.id
   function_rc user = 'lib/data/queries/users/find', id: user_id
   include 'theme/simple/profile/show', user: user
