--- a/app/views/partials/theme/simple/profile/uppy_form.liquid
+++ b/app/views/partials/theme/simple/profile/uppy_form.liquid
@@ -2,11 +2,7 @@
   expect presigned_url as item_photo_presigned_url
 {% endcomment %}
 
-<form action="{{ presigned_url.upload_url }}"
-  data-s3-uppy-item="form"
-  data-s3-uppy-user-id="{{ user_id }}"
-  data-item-uuid="{{ item_uuid }}"
-  hidden>
+<form action="{{ presigned_url.upload_url }}" data-s3-uppy-profile="form" hidden>
   {% for field in presigned_url.upload_url_payload %}
     <input type="hidden" name="{{ field[0] }}" value='{{ field[1] }}'>
   {% endfor %}
