hide follow button for me properly

--- a/app/views/partials/theme/simple/activities/show.liquid
+++ b/app/views/partials/theme/simple/activities/show.liquid
@@ -1,19 +1,24 @@
-<div class="w-2/3 bg-white mb-2 p-4 m-auto">
+{% assign type = activity.payload.type %}
+<div class="w-2/3 bg-white mb-2 p-4 m-auto shadow">
   <div class="w-full font-semibold">
     {% render 'theme/simple/business_card', user: activity.payload.actor, current_user: current_user %}
   </div>
   <div class="text-xs w-full"> {% print activity.payload.date  %} </div>
-  <div class="text-normal w-2/3 p-4 mt-3">
-    {% if activity.payload.type contains 'follow' %}
+  <div class="text-normal p-4 mt-3">
+    {% if type contains 'follow' %}
       {% render 'theme/simple/activities/user_activity', payload: activity.payload %}
-    {% elsif activity.payload.type contains 'visit' %}
+    {% elsif type contains 'visit' %}
       {% render 'theme/simple/activities/visit', payload: activity.payload %}
-    {% elsif activity.payload.type contains 'account' %}
+    {% elsif type contains 'account' %}
       {% render 'theme/simple/activities/user_activity', payload: activity.payload %}
-    {% elsif activity.payload.type contains 'order_status' %}
+    {% elsif type contains 'order_status' %}
       {% render 'theme/simple/activities/order_status', payload: activity.payload %}
-    {% elsif activity.payload.type contains 'order' %}
+    {% elsif type contains 'order' %}
       {% render 'theme/simple/activities/order_created', payload: activity.payload %}
+    {% elsif type contains 'item_created' %}
+      {% render 'theme/simple/activities/item_created', payload: activity.payload %}
     {% endif %}
+
   </div>
+  <div class="text-xs bg-gray-100">{% print activity.payload.type %}</div>
 </div>
