--- a/app/views/partials/theme/simple/activities/order_created.liquid
+++ b/app/views/partials/theme/simple/activities/order_created.liquid
@@ -2,5 +2,8 @@
      object_id: payload.object.id,
      target: payload.target.properties.name,
      target_id: payload.target.id,
-     url: payload.target.properties.cover_photo_url,
      scope: 'app.activities.types'  %}
+
+<div class="w-full p-4">
+  <img class="text-center m-auto" src="{{payload.target.properties.cover_photo_url}}" />
+</div>
