--- a/app/views/partials/theme/simple/profile/show.liquid
+++ b/app/views/partials/theme/simple/profile/show.liquid
@@ -1,41 +1,20 @@
 <div class="container flex flex-wrap items-center mx-auto mb-10">
   <h1 class="text-2xl">
-    Profile Settings
+    Your Profile
   </h1>
 </div>
-
-<div class="flex items-start max-w-xl">
-  <div class="mr-10">
-    <img src="{{ user.avatar.versions.small }}" alt="" class="w-32 h-32 mx-auto rounded-full shadow-md md:mx-0">
+<div class="flex flex-wrap -mx-4 -mb-4 md:mb-0">
+  <div class="w-full md:w-1/3 px-4 mb-4 md:mb-0">
+    {% include 'theme/simple/profile/card', user: user %}
+    {% include 'theme/simple/profile/manage', user: user %}
   </div>
-
-  <div class="mr-10">
-    <p>Username: <b class="font-mono">{{ user.username }}</b></p>
-    <p>First name: <b class="font-mono">{{ user.first_name }}</b></p>
-    <p>Last name: <b class="font-mono">{{ user.last_name }}</b></p>
-    <p><a href="/u/{{ user.id }}">{{ 'app.items.yours' | t }}</a></p>
-
-    {{ user.followed_users }}
-
+  <div class="w-full md:w-2/3 px-4 mb-4 md:mb-0">
+    {% include 'theme/simple/profile/nav' %}
+    {% include 'theme/simple/profile/activity_new' %}
+    {% include 'theme/simple/profile/activity' %}
   </div>
-
-  <a href="/profile/edit" class="text-sm button">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 383.95 383.95" class="w-3 mr-1"><path d="M0 303.95v80h80l236.05-236.06-80-80zM377.7 56.05L327.9 6.24a21.37 21.37 0 00-30.2 0l-39.03 39.04 80 80 39.04-39.04a21.37 21.37 0 000-30.19z" fill="currentColor" /></svg>
-    Edit <span class="sr-only">name and avatar</span>
-  </a>
 </div>
-<section class="mt-4 pt-4 border-t">
-  <header class="md:flex md:justify-between mb-2">
-    <h4 class="font-bold text-black text-lg  md:mr-6">Account</h4>
 
-    <!--
-      <div class="md:ml-auto">
-        <a class="link" href="/profile/password">Change password</a>
-      </div>
-    -->
-  </header>
 
-  <p>User ID: <b class="font-mono">{{ user.id }}</b></p>
-  <p>Email: <b class="font-mono">{{ user.email }}</b></p>
-  <p>Password: <b class="font-mono">******</b></p>
-</section>
+
+
