--- a/app/views/partials/theme/simple/business_card.liquid
+++ b/app/views/partials/theme/simple/business_card.liquid
@@ -3,8 +3,7 @@
 <div class="flex">
   <span class="business_card mr-2">by {% print name %}</span>
 
-  {% assign user_id = user.id | append: '' %}
-  {% if current_user and current_user != user_id %}
+  {% if current_user and current_user.id != user.id %}
     {% render 'theme/simple/follow_button', current_user: current_user, user: user %}
   {% endif %}
 </div>
