--- a/app/views/partials/theme/simple/profile/activity_new.liquid
+++ b/app/views/partials/theme/simple/profile/activity_new.liquid
@@ -3,13 +3,16 @@
 
   <div class="w-full flex flex-row flex-wrap mt-3">
     <div class="w-1/3">
-      <select class="w-full p-2 rounded-lg bg-gray-200 shadow border float-left">
-        <option>Public</option>
-        <option>Private</option>
-      </select>
+      <!--
+        <select class="w-full p-2 rounded-lg bg-gray-200 shadow border float-left">
+          <option>Public</option>
+          <option>Private</option>
+        </select>
+      -->
+
     </div>
     <div class="w-2/3">
-      <button type="button" class="float-right bg-indigo-400 hover:bg-indigo-300 text-white p-2 rounded-lg">Submit</button>
+      <button type="button" class="float-right button">Send</button>
     </div>
   </div>
 </div>
