--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -7,7 +7,7 @@
 }
 
 .button:hover, .button[href]:hover {
-  @apply text-white bg-blue-700;
+  @apply text-white bg-blue-600;
 }
 
 .button.button-secondary {
@@ -15,7 +15,7 @@
 }
 
 .button.button-secondary:hover  {
-  @apply bg-blue-100 border-blue-700;
+  @apply bg-blue-100 border-blue-700 text-blue-700;
 }
 
 .button-secondary.button-sm {
