--- a/app/views/partials/theme/simple/profile/activity.liquid
+++ b/app/views/partials/theme/simple/profile/activity.liquid
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-1 gap-6 my-6">
+<div class="grid grid-cols-1 gap-6 my-6 md:px-5 md:py-5">
   <div class="mx-auto px-4 py-4 bg-white shadow-md rounded-lg">
     <div class="py-2 flex flex-row items-center justify-between">
       <div class="flex flex-row items-center">
