--- a/app/views/partials/theme/simple/activities/feed_unit/type/visit.liquid
+++ b/app/views/partials/theme/simple/activities/feed_unit/type/visit.liquid
@@ -1,1 +1,2 @@
+{{ payload }}
 {% print payload.type | t: actor: payload.actor.username, obj: payload.object.pathname, target: payload.target.username,  scope: 'app.activities.types'  %}
