--- a/app/views/partials/theme/simple/admin/activities/index.liquid
+++ b/app/views/partials/theme/simple/admin/activities/index.liquid
@@ -1,4 +1,5 @@
 <div class="w-full bg-gray-200 p-3">
+
   <form action="" class="flex w-full flex-rows justify-between">
     <select name="feed" class="w-5/6 form-input text-xl">
       <option value="system.1">audit all events</option>
@@ -9,12 +10,13 @@
     </select>
     <input type="submit" class="w-1/6 form-input" value="GO">
   </form>
+
+<div class="grid grid-cols-1 gap-6 my-6">
+  {% for record in list.results %}
+    {% render 'theme/simple/activities/feed_unit', payload: record.payload, current_user: current_user %}
+  {% endfor %}
 </div>
 
-<div class="w-full bg-gray-200 p-3">
-  {% for record in list.results %}
-    {% render 'theme/simple/activities/show', activity: record, current_user: current_user %}
-  {% endfor %}
 </div>
 
 {% include 'theme/simple/items/follow.js' %}
