--- a/app/views/partials/theme/simple/activities/feed_unit.liquid
+++ b/app/views/partials/theme/simple/activities/feed_unit.liquid
@@ -4,9 +4,9 @@
 
   {% render 'theme/simple/activities/feed_unit/header', name: payload.actor.username, photo: payload.actor.photo.versions.tiny, date: payload.date %}
 
-  {% if payload.object.photo.versions.small %}
+  {% if payload.object.photos.size > 0 %}
     <div class="mt-2">
-      <img class="object-cover w-full rounded-lg" src="{{payload.object.photo.versions.small}}" alt="{{payload.object.name}}">
+      <img class="object-cover w-9 m-auto rounded-lg" src="{% print payload.object.photos.first.url.versions.small %}" alt="{{payload.object.name}}">
     </div>
   {% endif %}
 
@@ -24,6 +24,7 @@
         {% render 'theme/simple/activities/feed_unit/type/order_created', payload: payload %}
       {% elsif type contains 'item_created' %}
         {% render 'theme/simple/activities/feed_unit/type/item_created', payload: payload %}
+        <div class="text-xs"> {{ payload.object.description }} </div>
       {% endif %}
     </p>
   </div>
