Profile: public profiles

--- a/app/views/pages/dashboard/index.liquid
+++ b/app/views/pages/dashboard/index.liquid
@@ -1,6 +1,7 @@
 {% liquid
   include 'lib/must_be_authenticated'
-  include 'theme/simple/dashboard/index'
+  function user = 'lib/data/queries/users/find', id: context.current_user.id
+  include 'theme/simple/dashboard/index', user: user
 
   include 'lib/commands/events/create', type: 'page_visited', actor_id: context.current_user.id, object: context.location
 %}
