--- a/app/views/pages/profile/edit.liquid
+++ b/app/views/pages/profile/edit.liquid
@@ -1,4 +1,6 @@
 {% liquid
+  include 'lib/must_be_authenticated'
+
   assign user_id = context.current_user.id
   function_rc user = 'lib/data/queries/users/find', id: user_id
   graphql presigned_url = 'users/photos/presign' | dig: 'presigned'
