--- a/app/views/pages/profile/groups.liquid
+++ b/app/views/pages/profile/groups.liquid
@@ -1,6 +1,11 @@
 {% liquid
   include 'lib/must_be_authenticated'
 
-  function_rc user = 'lib/data/queries/users/find', id: context.current_user.id
+  function user = 'lib/data/queries/users/find', username: context.params.slug3
+  unless user.id
+    render 'theme/simple/404', status: 404
+    break
+  endunless
+
   include 'theme/simple/profile/show', user: user, tab: 'groups'
 %}
