--- a/app/views/partials/theme/simple/dashboard/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/index.liquid
@@ -49,7 +49,7 @@
         </div>
         <div class="flex-grow">
           <h2 class="mb-3 text-xl font-medium text-gray-900 ">{{ 'app.p-dashboard.settings' | t }}</h2>
-          <a class="inline-flex items-center mt-3 text-indigo-500" href="/profile">{{ 'app.p-dashboard.profile' | t }}
+          <a class="inline-flex items-center mt-3 text-indigo-500" href="/profile/{{user.username}}">{{ 'app.p-dashboard.profile' | t }}
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
             </svg>
