--- a/app/views/partials/theme/simple/profile/nav.liquid
+++ b/app/views/partials/theme/simple/profile/nav.liquid
@@ -1,16 +1,16 @@
 <div class="bg-white mb-5">
   <nav class="flex flex-col sm:flex-row">
     {% assign active_class = 'text-blue-500 border-b-2 font-medium border-blue-500'  %}
-    <a href="/profile/" class="text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none {% if tab == blank %}{{ active_class }}{% endif %}">
+    <a href="/profile/{{user.username}}" class="text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none {% if tab == blank %}{{ active_class }}{% endif %}">
       Activity
     </a>
-    <a href="/profile/groups" class="text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none {% if tab == 'groups' %}{{ active_class }}{% endif %}">
+    <a href="/profile/groups/{{user.username}}" class="text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none {% if tab == 'groups' %}{{ active_class }}{% endif %}">
       Groups
     </a>
-    <a href="/profile/following" class="text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none {% if tab == 'following' %}{{ active_class }}{% endif %}">
+    <a href="/profile/following/{{user.username}}" class="text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none {% if tab == 'following' %}{{ active_class }}{% endif %}">
       Following
     </a>
-    <a href="/profile/followers" class="text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none {% if tab == 'followers' %}{{ active_class }}{% endif %}">
+    <a href="/profile/followers/{{user.username}}" class="text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none {% if tab == 'followers' %}{{ active_class }}{% endif %}">
       Followers
     </a>
   </nav>
