--- a/app/views/partials/theme/simple/profile/show.liquid
+++ b/app/views/partials/theme/simple/profile/show.liquid
@@ -1,19 +1,21 @@
-<div class="container flex flex-wrap items-center mx-auto mb-10">
-  <h1 class="text-2xl">
-    Your Profile
-  </h1>
-</div>
 <div class="flex flex-wrap -mx-4 -mb-4 md:mb-0">
   <div class="w-full md:w-1/4 px-4 mb-4 md:mb-0">
-    {% include 'theme/simple/profile/card', user: user %}
-    {% include 'theme/simple/profile/manage', user: user %}
+    {% liquid
+      include 'theme/simple/profile/card', user: user
+      if user != blank and user.id == current_user.id
+        include 'theme/simple/profile/manage', user: user
+      endif
+    %}
+
   </div>
   <div class="w-full md:w-3/4 px-4 mb-4 md:mb-0">
     {% liquid
       include 'theme/simple/profile/nav', tab: tab
 
       if tab == blank
-        render 'theme/simple/profile/activity_new'
+        if user != blank and user.id == current_user.id
+          render 'theme/simple/profile/activity_new'
+        endif
         render 'theme/simple/profile/activity', activities: activities
       else
         assign file = 'theme/simple/profile/' | append: tab
