--- a/app/views/partials/theme/simple/profile/user_card.liquid
+++ b/app/views/partials/theme/simple/profile/user_card.liquid
@@ -1,14 +1,20 @@
 <div class="p-4 md:w-1/3">
   <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden pt-5">
-    <img class="md:h-48 md:w-48 h-24 w-24 object-cover object-center rounded-full shadow-md mx-auto" src="{{ user.avatar.versions.small }}" alt="blog">
+    {% liquid
+      assign img_url = user.avatar.versions.small
+      unless img_url
+        assign img_url = 'images/user.svg' | asset_url
+      endunless
+    %}
+    <img class="md:h-48 md:w-48 h-24 w-24 object-cover object-center rounded-full shadow-md mx-auto" src="{{ img_url }}" alt="blog">
     <div class="p-6">
       <h2 class="text-gray-900 title-font font-medium mb-1">
-        {{ user.first_name }} {{ user.last_name }}
+        {{ user.first_name | append: user.last_name | default: user.username }}
       </h2>
       <h1 class="title-font text-lg font-medium text-gray-900 mb-3">{{ group.name }}</h1>
       <div class="flex items-center flex-wrap ">
-        <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">
-          Follow
+        <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0" href="/profile/{{user.username}}">
+          View
           <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"> <path d="M5 12h14"></path> <path d="M12 5l7 7-7 7"></path> </svg>
         </a>
         <span class="text-gray-600 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1" title="Following">
