--- a/app/views/pages/profile/index.liquid
+++ b/app/views/pages/profile/index.liquid
@@ -7,7 +7,8 @@ slug: profile
     render 'theme/simple/404', status: 404
     break
   endunless
-
+  function_rc current_user = 'lib/data/queries/users/find', id: context.current_user.id
   function_rc list = 'lib/data/queries/activities/search', feed: 'user', feed_id: user.id, limit: 100
-  include 'theme/simple/profile/show', user: user, activities: list
+
+  include 'theme/simple/profile/show', user: user, activities: list, current_user: current_user
 %}
