--- a/app/views/partials/theme/simple/profile/show.liquid
+++ b/app/views/partials/theme/simple/profile/show.liquid
@@ -3,10 +3,11 @@
     {% liquid
       include 'theme/simple/profile/card', user: user
       if user != blank and user.id == current_user.id
-        include 'theme/simple/profile/manage', user: user
+        include 'theme/simple/profile/profile_actions_owner', user: user
+      elsif current_user != blank
+        render 'theme/simple/follow_button', current_user: current_user, user: user
       endif
     %}
-
   </div>
   <div class="w-full md:w-3/4 px-4 mb-4 md:mb-0">
     {% liquid
@@ -25,6 +26,4 @@
   </div>
 </div>
 
-
-
-
+{% include 'theme/simple/items/follow.js' %}
