--- a/app/views/partials/theme/simple/profile/user_card.liquid
+++ b/app/views/partials/theme/simple/profile/user_card.liquid
@@ -9,14 +9,13 @@
     <img class="md:h-48 md:w-48 h-24 w-24 object-cover object-center rounded-full shadow-md mx-auto" src="{{ img_url }}" alt="blog">
     <div class="p-6">
       <h2 class="text-gray-900 title-font font-medium mb-1">
-        {{ user.first_name | append: user.last_name | default: user.username }}
+        <a href="/profile/{{user.username}}">
+          {{ user.first_name | append: user.last_name | default: user.username }}
+        </a>
       </h2>
       <h1 class="title-font text-lg font-medium text-gray-900 mb-3">{{ group.name }}</h1>
       <div class="flex items-center flex-wrap ">
-        <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0" href="/profile/{{user.username}}">
-          View
-          <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"> <path d="M5 12h14"></path> <path d="M12 5l7 7-7 7"></path> </svg>
-        </a>
+        {% render 'theme/simple/follow_button', current_user: current_user, user: user %}
         <span class="text-gray-600 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1" title="Following">
           <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"> <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path> <circle cx="12" cy="12" r="3"></circle> </svg>
           1.2K
