--- a/app/views/partials/theme/simple/users/form.liquid
+++ b/app/views/partials/theme/simple/users/form.liquid
@@ -1,7 +1,7 @@
 <form action="/users" method="post">
   {% include 'authenticity_token' %}
 
-  <label class="block mt-3" for="email">
+  <label class="block mt-3" for="username">
     <span class="block">Username</span>
     <input name="user[username]" type="text" id="username" value="{{ object.username }}" class="w-full form-input" autofocus />
     {% include 'theme/simple/field_error', errors: object.errors.username %}
