--- a/app/views/pages/admin/activities/index.liquid
+++ b/app/views/pages/admin/activities/index.liquid
@@ -3,13 +3,23 @@
   include 'lib/must_be_superadmin'
 
   assign feed = context.params.feed | split: '.'
-  assign feed_name = feed[0]| default: 'system'
+  assign feed_name = feed[0] | default: 'system'
   assign feed_id = feed[1] | default: '1'
 
+  if feed_name != 'system'
+    if context.params.public
+      assign feed_name = feed_name | append: '-public'
+    else
+      assign feed_name = feed_name | append: '-private'
+    endif
+  endif
+
   function_rc list = 'lib/data/queries/activities/search', feed: feed_name, feed_id: feed_id, limit: 100
-  function_rc users = 'lib/data/queries/users/search', limit: 10
+  function_rc users = 'lib/data/queries/users/search', limit: 100
   function_rc current_user = 'lib/data/queries/users/find', id: context.current_user.id
 
+  function_rc selected = 'lib/data/queries/users/find', id: feed_id
+
   include 'theme/simple/admin/menu', section: 'activities'
-  include 'theme/simple/admin/activities/index', list: list, section: 'activities', users: users, current_user: current_user
+  include 'theme/simple/admin/activities/index', list: list, section: 'activities', users: users, current_user: current_user, selected: selected
 %}
