--- a/app/views/partials/lib/consumers/order_created/activity_feeds.liquid
+++ b/app/views/partials/lib/consumers/order_created/activity_feeds.liquid
@@ -19,3 +19,4 @@
   render 'lib/commands/activities/publish', uuid: event.uuid, type: "user", ids: ids
 %}
 
+{% include 'lib/commands/activities/publish', uuid: event.uuid, type: "system", ids: "1" %}
