--- a/app/views/partials/theme/simple/profile/show.liquid
+++ b/app/views/partials/theme/simple/profile/show.liquid
@@ -10,9 +10,9 @@
     %}
   </div>
   <div class="w-full md:w-3/4 px-4 mb-4 md:mb-0">
-    {% liquid
-      include 'theme/simple/profile/nav', tab: tab
+    {% render 'theme/simple/profile/nav', tab: tab, private_feed: private_feed, user: user %}
 
+    {% liquid
       if tab == blank
         if user != blank and user.id == current_user.id
           render 'theme/simple/profile/activity_new'
