--- a/app/views/partials/theme/simple/profile/show.liquid
+++ b/app/views/partials/theme/simple/profile/show.liquid
@@ -10,7 +10,7 @@
     %}
   </div>
   <div class="w-full md:w-3/4 px-4 mb-4 md:mb-0">
-    {% render 'theme/simple/profile/nav', tab: tab, private_feed: private_feed, user: user %}
+    {% render 'theme/simple/profile/nav', tab: tab, user: user %}
 
     {% liquid
       if tab == blank
