--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -1,5 +1,5 @@
 .button, .button[href] {
-  @apply flex items-center justify-center px-6 py-2 text-center text-white bg-blue-700 border-0 rounded;
+  @apply items-center justify-center px-6 py-2 text-center text-white bg-blue-700 border-0 rounded;
 }
 
 .button:focus {
